--- a/src/NugetAuditor/NugetAuditor.Console/packages.config
+++ b/src/NugetAuditor/NugetAuditor.Console/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="ILMerge" version="2.14.1208" targetFramework="net452" />
 </packages>
