--- a/src/NugetAuditor/NugetAuditor.Console/packages.config
+++ b/src/NugetAuditor/NugetAuditor.Console/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net452" />
   <package id="ILMerge" version="2.14.1208" targetFramework="net452" />
+  <package id="ILMerge.MSBuild.Tasks" version="1.0.0.3" targetFramework="net452" />
 </packages>
