--- a/src/NugetAuditor/NugetAuditor.Lib/NugetAuditor.Lib.csproj
+++ b/src/NugetAuditor/NugetAuditor.Lib/NugetAuditor.Lib.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{B7B53C9B-AAB6-496C-92FA-5E315A71753B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VorSecurity.Lib</RootNamespace>
+    <RootNamespace>NugetAuditor.Lib</RootNamespace>
     <AssemblyName>NugetAuditor.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -31,18 +31,21 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>NugetAuditor.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Web.XmlTransform, Version=2.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Web.Xdt.2.1.0\lib\net40\Microsoft.Web.XmlTransform.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NuGet.Core, Version=2.9.0.729, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\NuGet.Core.2.9.0\lib\net40-Client\NuGet.Core.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="RestSharp, Version=105.2.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.105.2.3\lib\net45\RestSharp.dll</HintPath>
+    <Reference Include="RestSharp, Version=100.0.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharpSigned.105.2.3\lib\net45\RestSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="SemVer, Version=0.6.2.0, Culture=neutral, processorArchitecture=MSIL">
@@ -57,18 +60,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Artifact.cs" />
+    <Compile Include="Extensions.cs" />
+    <Compile Include="Location.cs" />
+    <Compile Include="OSSIndex\Artifact.cs" />
     <Compile Include="ArtifactSearch.cs" />
     <Compile Include="AuditResult.cs" />
     <Compile Include="AuditStatus.cs" />
     <Compile Include="NugetAuditor.cs" />
-    <Compile Include="OSSIndexApi.cs" />
-    <Compile Include="PackageName.cs" />
+    <Compile Include="OSSIndex\ApiClientBase.cs" />
+    <Compile Include="OSSIndex\IApiClient.cs" />
+    <Compile Include="OSSIndex\ApiClient.cs" />
+    <Compile Include="PackageId.cs" />
+    <Compile Include="PackageReference.cs" />
+    <Compile Include="PackageReferencesFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SCM.cs" />
-    <Compile Include="Vulnerability.cs" />
+    <Compile Include="OSSIndex\SCM.cs" />
+    <Compile Include="OSSIndex\Vulnerability.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="NugetAuditor.snk" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
