--- a/src/NugetAuditor/NugetAuditor.VSIX/packages.config
+++ b/src/NugetAuditor/NugetAuditor.VSIX/packages.config
@@ -20,5 +20,6 @@
   <package id="Microsoft.VisualStudio.Validation" version="14.0.50702" targetFramework="net452" />
   <package id="Microsoft.VSSDK.BuildTools" version="14.0.23107" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Xdt" version="2.1.0" targetFramework="net452" />
+  <package id="NuGet.Versioning" version="3.3.0" targetFramework="net452" />
   <package id="NuGet.VisualStudio" version="2.8.6" targetFramework="net452" />
 </packages>
