--- a/src/NugetAuditor/NugetAuditor.Lib/packages.config
+++ b/src/NugetAuditor/NugetAuditor.Lib/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Brutal.Dev.StrongNameSigner" version="1.5.1" targetFramework="net45" />
   <package id="Microsoft.Web.Xdt" version="2.1.0" targetFramework="net45" />
+  <package id="NuGet.Versioning" version="3.3.0" targetFramework="net45" />
   <package id="RestSharpSigned" version="105.2.3" targetFramework="net45" />
   <package id="SemanticVersioning" version="0.6.2.0" targetFramework="net45" />
 </packages>
