--- a/src/NugetAuditor/NugetAuditor.VSIX/NugetAuditor.VSIX.csproj
+++ b/src/NugetAuditor/NugetAuditor.VSIX/NugetAuditor.VSIX.csproj
@@ -58,12 +58,14 @@
     <Compile Include="AuditHelper.cs" />
     <Compile Include="AuditCompletedEventArgs.cs" />
     <Compile Include="EventSinks\SelectionEvents.cs" />
-    <Compile Include="Task.cs" />
-    <Compile Include="AuditTaskProvider.cs" />
-    <Compile Include="ITask.cs" />
-    <Compile Include="TaskProvider.cs" />
+    <Compile Include="ExceptionHelper.cs" />
+    <Compile Include="PackageReferenceMarker.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="Guids.cs" />
-    <Compile Include="ITaskProvider.cs" />
     <Compile Include="PkgCmdID.cs" />
     <Compile Include="ErrorHandler.cs" />
     <Compile Include="NugetAuditManager.cs" />
@@ -71,7 +73,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLocator.cs" />
     <Compile Include="VSPackage.cs" />
+    <Compile Include="VsVersionHelper.cs" />
     <Compile Include="VulnerabilityTask.cs" />
+    <Compile Include="VulnerabilityTaskProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -222,6 +226,10 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="VSPackage.resx">
       <MergeWithCTO>true</MergeWithCTO>
       <ManifestResourceName>VSPackage</ManifestResourceName>
