--- a/src/NugetAuditor/NugetAuditor.Console/NugetAuditor.ConsoleApp.csproj
+++ b/src/NugetAuditor/NugetAuditor.Console/NugetAuditor.ConsoleApp.csproj
@@ -50,6 +50,12 @@
     <WarningLevel>4</WarningLevel>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>..\NugetAuditor.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
       <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
@@ -60,11 +66,20 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\NugetAuditor.snk">
+      <Link>NugetAuditor.snk</Link>
+    </None>
+    <None Include="..\NugetAuditor.VSIX.licenseheader">
+      <Link>NugetAuditor.VSIX.licenseheader</Link>
+    </None>
     <None Include="App.config" />
     <None Include="ILMerge.targets" />
     <None Include="packages.config" />
