--- a/src/NugetAuditor/NugetAuditor.VSIX/NugetAuditor.VSIX.csproj
+++ b/src/NugetAuditor/NugetAuditor.VSIX/NugetAuditor.VSIX.csproj
@@ -12,7 +12,7 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>Key.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>..\NugetAuditor.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -45,6 +45,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <CreateVsixContainer>True</CreateVsixContainer>
     <RunCodeAnalysis>false</RunCodeAnalysis>
+    <CopyVsixExtensionFiles>False</CopyVsixExtensionFiles>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -55,7 +56,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AuditHelper.cs" />
+    <Compile Include="..\VersionInfo.cs">
+      <Link>Properties\VersionInfo.cs</Link>
+    </Compile>
+    <Compile Include="VsUtility.cs" />
     <Compile Include="AuditCompletedEventArgs.cs" />
     <Compile Include="EventSinks\SelectionEvents.cs" />
     <Compile Include="ExceptionHelper.cs" />
@@ -78,8 +82,13 @@
     <Compile Include="VulnerabilityTaskProvider.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\NugetAuditor.snk">
+      <Link>NugetAuditor.snk</Link>
+    </None>
+    <None Include="..\NugetAuditor.VSIX.licenseheader">
+      <Link>NugetAuditor.VSIX.licenseheader</Link>
+    </None>
     <None Include="app.config" />
-    <None Include="Key.snk" />
     <None Include="packages.config" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
