--- a/src/NugetAuditor/NugetAuditor.VSIX/NugetAuditor.VSIX.csproj
+++ b/src/NugetAuditor/NugetAuditor.VSIX/NugetAuditor.VSIX.csproj
@@ -45,7 +45,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <CreateVsixContainer>True</CreateVsixContainer>
     <RunCodeAnalysis>false</RunCodeAnalysis>
-    <CopyVsixExtensionFiles>False</CopyVsixExtensionFiles>
+    <CopyVsixExtensionFiles>True</CopyVsixExtensionFiles>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -73,7 +73,6 @@
     <Compile Include="PkgCmdID.cs" />
     <Compile Include="ErrorHandler.cs" />
     <Compile Include="NugetAuditManager.cs" />
-    <Compile Include="ProjectInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceLocator.cs" />
     <Compile Include="VSPackage.cs" />
@@ -101,7 +100,10 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="Resources\Toolbar.png" />
-    <Content Include="Resources\OSSAuditPackage.ico" />
+    <Content Include="Resources\OSSAuditPackage.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <Content Include="stylesheet.css" />
   </ItemGroup>
   <ItemGroup>
