--- a/src/NugetAuditor/NugetAuditor.VSIX/NugetAuditor.VSIX.csproj
+++ b/src/NugetAuditor/NugetAuditor.VSIX/NugetAuditor.VSIX.csproj
@@ -46,10 +46,11 @@
     <PlatformTarget>x86</PlatformTarget>
     <CreateVsixContainer>True</CreateVsixContainer>
     <RunCodeAnalysis>false</RunCodeAnalysis>
-    <CopyVsixExtensionFiles>True</CopyVsixExtensionFiles>
+    <CopyVsixExtensionFiles>False</CopyVsixExtensionFiles>
     <CopyVsixExtensionLocation>
     </CopyVsixExtensionLocation>
     <Prefer32Bit>false</Prefer32Bit>
+    <DeployExtension>True</DeployExtension>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
