--- a/src/NugetAuditor/NugetAuditor.VSIX/packages.config
+++ b/src/NugetAuditor/NugetAuditor.VSIX/packages.config
@@ -7,19 +7,17 @@
   <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE.10" version="10.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE.11" version="11.0.4" targetFramework="net45" />
-  <package id="VSSDK.IDE.12" version="12.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE.8" version="8.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE.9" version="9.0.4" targetFramework="net45" />
   <package id="VSSDK.OLE.Interop" version="7.0.4" targetFramework="net45" />
-  <package id="VSSDK.Shell.12" version="12.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.11" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.Shell.Immutable.10" version="10.0.4" targetFramework="net45" />
   <package id="VSSDK.Shell.Immutable.11" version="11.0.4" targetFramework="net45" />
-  <package id="VSSDK.Shell.Immutable.12" version="12.0.4" targetFramework="net45" />
   <package id="VSSDK.Shell.Interop" version="7.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.Interop.10" version="10.0.4" targetFramework="net45" />
+  <package id="VSSDK.Shell.Interop.11" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.Shell.Interop.8" version="8.0.4" targetFramework="net45" />
   <package id="VSSDK.Shell.Interop.9" version="9.0.4" targetFramework="net45" />
   <package id="VSSDK.TextManager.Interop" version="7.0.4" targetFramework="net45" />
   <package id="VSSDK.TextManager.Interop.8" version="8.0.4" targetFramework="net45" />
-  <package id="VSSDK.Threading" version="12.0.4" targetFramework="net45" />
-  <package id="VSSDK.Threading.12" version="12.0.4" targetFramework="net45" />
 </packages>
