--- a/src/NugetAuditor/NugetAuditor.VSIX/packages.config
+++ b/src/NugetAuditor/NugetAuditor.VSIX/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="NuGet.Versioning" version="3.3.0" targetFramework="net452" />
   <package id="NuGet.VisualStudio" version="3.3.0" targetFramework="net45" />
+  <package id="VSSDK.ComponentModelHost" version="10.0.4" targetFramework="net45" />
+  <package id="VSSDK.ComponentModelHost.10" version="10.0.4" targetFramework="net45" />
   <package id="VSSDK.DTE" version="7.0.4" targetFramework="net45" />
   <package id="VSSDK.GraphModel" version="11.0.4" targetFramework="net45" />
   <package id="VSSDK.IDE" version="7.0.4" targetFramework="net45" />
