--- a/src/NugetAuditor/packages.config
+++ b/src/NugetAuditor/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="RestSharp" version="105.2.3" />
   <package id="AjaxControlToolkit" version="15.1.4"  targetFramework="net45"/>
+	<package id="jQuery" version="1.2.0" />
 </packages>
