--- a/src/NugetAuditor/NugetAuditor.Lib/NugetAuditor.Lib.csproj
+++ b/src/NugetAuditor/NugetAuditor.Lib/NugetAuditor.Lib.csproj
@@ -85,6 +85,7 @@
     <Compile Include="PackageReferencesFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OSSIndex\Vulnerability.cs" />
+    <Compile Include="WhiteListed.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\NugetAuditor.snk">
