--- a/src/NugetAuditor/NugetAuditor.Lib/packages.config
+++ b/src/NugetAuditor/NugetAuditor.Lib/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Brutal.Dev.StrongNameSigner" version="1.6.1" targetFramework="net45" />
+  <package id="jQuery" version="1.9.0" targetFramework="net45" />
   <package id="NuGet.Versioning" version="3.3.0" targetFramework="net45" />
   <package id="RestSharpSigned" version="105.2.3" targetFramework="net45" />
   <package id="SemanticVersioning" version="0.6.9.0" targetFramework="net45" />
