--- a/src/NugetAuditor/NugetAuditor.Console/NugetAuditor.ConsoleApp.csproj
+++ b/src/NugetAuditor/NugetAuditor.Console/NugetAuditor.ConsoleApp.csproj
@@ -86,7 +86,9 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="ILMerge.targets" />
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NugetAuditor.Lib\NugetAuditor.Lib.csproj">
