--- a/src/NugetAuditor/NugetAuditor.Lib/packages.config
+++ b/src/NugetAuditor/NugetAuditor.Lib/packages.config
@@ -2,7 +2,28 @@
 <packages>
   <package id="Brutal.Dev.StrongNameSigner" version="1.6.1" targetFramework="net45" />
   <package id="FileCache.Signed" version="2.1.4" targetFramework="net45" />
-  <package id="NuGet.Versioning" version="3.3.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="NuGet.Client" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Commands" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Common" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Configuration" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.ContentModel" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Core" version="2.13.0" targetFramework="net45" />
+  <package id="NuGet.DependencyResolver.Core" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Frameworks" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.LibraryModel" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Packaging" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Packaging.Core" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Packaging.Core.Types" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.ProjectManagement" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.ProjectModel" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Protocol.Core.Types" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Protocol.Core.v2" version="3.5.0" targetFramework="net45" />
+  <package id="NuGet.Protocol.Core.v3" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Repositories" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.RuntimeModel" version="4.2.0" targetFramework="net45" />
+  <package id="NuGet.Versioning" version="4.2.0" targetFramework="net45" />
   <package id="RestSharpSigned" version="105.2.3" targetFramework="net45" />
   <package id="SemanticVersioning" version="0.6.9.0" targetFramework="net45" />
 </packages>
