Add unit tests project, script for updating version in CI. OSSIndex/audit.net#23

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /tests/NugetAuditor.Tests/bin/Debug
+/tests/NugetAuditor.Tests/obj/Debug
