--- a/tests/NugetAuditor.Tests/packages.config
+++ b/tests/NugetAuditor.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net472" />
+  <package id="NuGet.Common" version="4.2.0" targetFramework="net472" />
 </packages>
