Fix bug in VS 2017 solution.

--- a/src/NugetAuditor/NugetAuditor.Lib/packages.config
+++ b/src/NugetAuditor/NugetAuditor.Lib/packages.config
@@ -24,6 +24,6 @@
   <package id="NuGet.Repositories" version="4.2.0" targetFramework="net45" />
   <package id="NuGet.RuntimeModel" version="4.2.0" targetFramework="net45" />
   <package id="NuGet.Versioning" version="4.2.0" targetFramework="net45" />
-  <package id="RestSharpSigned" version="105.2.3" targetFramework="net45" requireReinstallation="true" />
+  <package id="RestSharpSigned" version="105.2.3" targetFramework="net45" />
   <package id="SemanticVersioning" version="0.6.9.0" targetFramework="net45" />
 </packages>
